Updating site with PDF version of documents

--- a/case-study.html
+++ b/case-study.html
@@ -59,8 +59,8 @@ Loveland, CO 80537<br/></p>
 <p>Please contact Cassandra Lemmon at <a href="mailto:cassandra.lemmon@gmail.com?Subject=CaseStudy">cassandra.lemmon@gmail.com</a> with any questions at any point throughout the process. Please also R.S.V.P. to this email address so that enough materials can be made ready for all participants.</p>
 <h2>Conditions of Participation:</h2>
 <p>Participants must be in 2nd or 3rd grade (7-9 years old) from any school or district.  They must have a consent form signed by a parent or legal guardian as well as an assent form expressing their willingness to participate.  Students may choose to leave the study at any time and contact a parent or guardian for pick-up without penalty, at which time their data will be excluded from the study.  All forms can be found below and paper copies will be made available at the study site.</p>
-<p><a href="/pdfs/Letter of Assent.docx">Letter of Assent</a>
-<a href="/pdfs/Letter of Consent.docx">Letter of Consent</a></p>
+<p><a href="/pdfs/Letter of Assent.pdf">Letter of Assent</a>
+<a href="/pdfs/Letter of Consent.pdf">Letter of Consent</a></p>
     </div><!-- /.entry-content -->
 
   </article>
