update to the content First Review

--- a/case-study.html
+++ b/case-study.html
@@ -40,25 +40,26 @@
 <p>Welcome! On this page you will find an explanation of the case study and its purpose as well as information as to how your child can participate in this project.  Please feel free to contact me at <a href="mailto:cassandra.lemmon@gmail.com?Subject=CaseStudy">cassandra.lemmon@gmail.com</a> if you have any questions and to let me know that you will be joining us.</p>
 <h2>What:</h2>
 <p>Case Study Project for Cassandra Lemmon – Masters of Music Education Student, Colorado State University</p>
+<p>The data collected in this Case Study will be used as part of the Master’s Thesis project to be completed as part of Mrs. Lemmon’s degree in Music Education at Colorado State University.  The thesis may be published in academic journals in the future.  All confidentiality protocols (as outlined below) will be maintained in that event.  </p>
 <h2>Where:</h2>
 <p>Room 219<br/>
 Loveland Classical Schools Main Campus<br/>
 3835 14th St. SW<br/>
 Loveland, CO 80537<br/></p>
 <h2>When:</h2>
-<p>1-4pm Saturday, February 27th, 2016</p>
+<p>1:00-4:00pm on Saturday, February 27th, 2016</p>
 <h2>How:</h2>
 <p>To participate, please contact Cassandra Lemmon at <a href="mailto:cassandra.lemmon@gmail.com?Subject=CaseStudy">cassandra.lemmon@gmail.com</a> to R.S.V.P. for the event.  Either print out and sign the Consent and Assent forms below or be prepared to sign them on site.</p>
 <h2>Purpose:</h2>
-<p>The purpose of this case study is to consider what young children can take away from Music lessons that include guided listening in conjunction with historical study.</p>
+<p>The purpose of this case study is to consider what young children can take away from music lessons that include guided listening in conjunction with historical study.</p>
 <h2>Benefits and Risks:</h2>
 <p>The potential risks to participants in this case study are minimal.  While the students will not directly benefit from the study beyond the information they will gain in the lesson, the benefit will be in the information gained for the purpose of pedagogical improvement in elementary music classrooms.</p>
 <h2>Confidentiality:</h2>
-<p>Names of participants will only be included on consent forms and assent forms and not used in the data collection process or the data analysis process.  Additionally, all forms will be kept locked and secure with Dr. Angela Christian, Music History professor at Colorado State University, for three years as per the standard practice and requirements before being destroyed.  Should the thesis be published, all confidentiality protocols will be followed.</p>
+<p>Names of participants will only be included on consent forms and assent forms and will not be used in the data collection process or the data analysis process.  Additionally, all forms will be kept locked and secure with Cassandra Lemmon’s thesis advisor Dr. Angela Mace Christian, Assistant Professor of Music History at Colorado State University, for three years as per the standard practice and requirements before being destroyed.  Should the thesis be published, all confidentiality protocols will be followed.</p>
 <h2>Contact Information:</h2>
 <p>Please contact Cassandra Lemmon at <a href="mailto:cassandra.lemmon@gmail.com?Subject=CaseStudy">cassandra.lemmon@gmail.com</a> with any questions at any point throughout the process. Please also R.S.V.P. to this email address so that enough materials can be made ready for all participants.</p>
 <h2>Conditions of Participation:</h2>
-<p>Participants must be in 2nd or 3rd grade (7-9 years old) from any school or district.  They must have a consent form signed by a parent or legal guardian as well as an assent form expressing their willingness to participate.  Students may choose to leave the study at any time and contact a parent or guardian for pick-up without penalty, at which time their data will be excluded from the study.  All forms can be found below and paper copies will be made available at the study site.</p>
+<p>Participants must be in 2nd or 3rd grade (7-9 years old) from any school or district.  They must have a consent form signed by a parent or legal guardian as well as an assent form expressing their willingness to participate.  Students may choose to leave the study at any time and will be able to contact a parent or guardian for pick-up without penalty, at which time their data will be excluded from the study.  All forms can be found below and paper copies will be made available at the study site.</p>
 <p><a href="/pdfs/Letter of Assent.pdf">Letter of Assent</a>
 <a href="/pdfs/Letter of Consent.pdf">Letter of Consent</a></p>
     </div><!-- /.entry-content -->
